--- a/index-agency.html
+++ b/index-agency.html
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <!-- Background Image -->
-                <img class="slidea-background" src="img/bg-img/agency-1.jpg" alt="">
+                <img class="slidea-background" src="img/bg-img/1-1.jpg" alt="">
             </div>
 
             <!-- Slidea Slide -->
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <!-- Background Image -->
-                <img class="slidea-background" src="img/bg-img/agency-2.jpg" alt="">
+                <img class="slidea-background" src="img/bg-img/1-2.jpg" alt="">
             </div>
         </div>
     </section>
@@ -138,7 +138,7 @@
                     <!-- Single Feature Area Start -->
                     <div class="single_feature wow fadeInUp" data-wow-delay=".2s">
                         <div class="feature_img">
-                            <i class="fa fa-university" aria-hidden="true"></i>
+                            <img src="img/bg-img/design.png" class="new-icons">
                         </div>
                         <!-- Single Feature Image Area End -->
                         <div class="feature_text">
@@ -152,7 +152,7 @@
                     <!-- Single Feature Area Start -->
                     <div class="single_feature wow fadeInUp" data-wow-delay=".4s">
                         <div class="feature_img">
-                            <i class="fa fa-trophy" aria-hidden="true"></i>
+                            <img src="img/bg-img/build.png" class="new-icons">
                         </div>
                         <!-- Single Feature Image Area End -->
                         <div class="feature_text">
@@ -166,7 +166,7 @@
                     <!-- Single Feature Area Start -->
                     <div class="single_feature wow fadeInUp" data-wow-delay=".6s">
                         <div class="feature_img">
-                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                            <img src="img/bg-img/ship.png" class="new-icons">
                         </div>
                         <!-- Single Feature Image Area End -->
                         <div class="feature_text">
@@ -183,7 +183,7 @@
     <!-- ***** Agency About Us Area Start ***** -->
     <section class="agency_about_us_area agency_version clearfix" id="about">
         <!-- Agency About Image Area Start -->
-        <div class="agency_about_img height-500 jarallax background-overlay" style="background-image: url(img/bg-img/bg-7.jpg);">
+        <div class="agency_about_img height-500 jarallax background-overlay" style="background-image: url(img/bg-img/1-3.jpg);">
             <div class="classy-table">
                 <div class="classy-table-cell">
                     <div class="container">
@@ -191,7 +191,7 @@
                             <div class="col-12">
                                 <!-- About Us Text Start -->
                                 <div class="about_us_text">
-                                    <h3>About us</h3>
+                                    <h3 class = "text-white">About us</h3>
                                     <p>For over sixty years and three generations, Porta Door has proved to be a reliable source of fine woodworking components to both large and small woodworking professionals alike. We are proud of the standards we set to serve our customers. Specializing in Custom: Cabinet Doors & Drawer Fronts, Dovetail Drawer Boxes, Cabinet & Architectural Mouldings, Square & Beaded Face Frames, Wine Racks & Cabinet Accessories, Complete Finishing Cut To Size Lumber and much more.</p>
                                     <a href="#" class="">Learn More <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
                                 </div>
@@ -471,10 +471,10 @@
 
                 <!-- Single Service Area Start -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="single_service bg-mat-cyan p-30 m-bottom-30 wow fadeInUp" data-wow-delay=".2s">
+                    <div class="single_service bg-1 p-30 m-bottom-30 wow fadeInUp" data-wow-delay=".2s">
                         <!-- Single Service image -->
                         <div class="single_service_img">
-                            <i class="ci-checked" aria-hidden="true"></i>
+                            <img src="img/bg-img/cabinetdoors.png" class="new-icons">
                         </div>
                         <!-- Single Service title -->
                         <div class="single_service_title">
@@ -492,10 +492,10 @@
 
                 <!-- Single Service Area Start -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="single_service bg-mat-teal p-30 m-bottom-30 wow fadeInUp" data-wow-delay=".4s">
+                    <div class="single_service bg-2 p-30 m-bottom-30 wow fadeInUp" data-wow-delay=".4s">
                         <!-- Single Service image -->
                         <div class="single_service_img">
-                            <i class="ci-gifts" aria-hidden="true"></i>
+                            <img src="img/bg-img/drawerbox.png" class="new-icons">
                         </div>
                         <!-- Single Service title -->
                         <div class="single_service_title">
@@ -513,10 +513,10 @@
 
                 <!-- Single Service Area Start -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="single_service bg-mat-pink p-30 m-bottom-30 wow fadeInUp" data-wow-delay=".6s">
+                    <div class="single_service bg-3 p-30 m-bottom-30 wow fadeInUp" data-wow-delay=".6s">
                         <!-- Single Service image -->
                         <div class="single_service_img">
-                            <i class="ci-leaf" aria-hidden="true"></i>
+                            <img src="img/bg-img/wall--panel.png" class="new-icons">
                         </div>
                         <!-- Single Service title -->
                         <div class="single_service_title">
@@ -534,10 +534,10 @@
 
                 <!-- Single Service Area Start -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="single_service bg-mat-deeporange p-30 m-bottom-30 wow fadeInUp" data-wow-delay=".8s">
+                    <div class="single_service bg-4 p-30 m-bottom-30 wow fadeInUp" data-wow-delay=".8s">
                         <!-- Single Service image -->
                         <div class="single_service_img">
-                            <i class="ci-money" aria-hidden="true"></i>
+                            <img src="img/bg-img/moulding.png" class="new-icons">
                         </div>
                         <!-- Single Service title -->
                         <div class="single_service_title">
@@ -555,10 +555,10 @@
 
                 <!-- Single Service Area Start -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="single_service bg-mat-blue p-30 m-bottom-30 wow fadeInUp" data-wow-delay="1s">
+                    <div class="single_service bg-5 p-30 m-bottom-30 wow fadeInUp" data-wow-delay="1s">
                         <!-- Single Service image -->
                         <div class="single_service_img">
-                            <i class="ci-wallet" aria-hidden="true"></i>
+                            <img src="img/bg-img/cab-components.png" class="new-icons">
                         </div>
                         <!-- Single Service title -->
                         <div class="single_service_title">
@@ -576,10 +576,10 @@
 
                 <!-- Single Service Area Start -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="single_service bg-mat-indigo p-30 m-bottom-30 wow fadeInUp" data-wow-delay="1.2s">
+                    <div class="single_service bg-6 p-30 m-bottom-30 wow fadeInUp" data-wow-delay="1.2s">
                         <!-- Single Service image -->
                         <div class="single_service_img">
-                            <i class="ci-piggy-bank" aria-hidden="true"></i>
+                            <img src="img/bg-img/specialty.png" class="new-icons">
                         </div>
                         <!-- Single Service title -->
                         <div class="single_service_title">
@@ -601,11 +601,11 @@
     <!-- ***** Our Services Area End ***** -->
 
     <!-- ***** Video Area Start ***** -->
-    <div class="video_area text-center agency_version section_padding_100 jarallax background-overlay" style="background-image: url(img/bg-img/agency-video.jpg);">
+    <div class="video_area text-center agency_version section_padding_100 jarallax background-overlay" style="background-image: url(img/bg-img/1-4.jpg);">
         <!-- Single Speciality Video Area Start -->
         <div class="video_play_area">
-            <h3>Are you ready for Agency?</h3>
-            <p>Watch this video. It's take 4 min.</p>
+            
+            <p>Watch this video</p>
             <!-- Video Link -->
             <a href="https://www.youtube.com/watch?v=ru3cr01DbWo" class="video_btn"><i class="pe-7s-play" aria-hidden="true"></i></a>
         </div>
@@ -800,7 +800,7 @@
                 <div class="col-12 col-sm-6 col-md-3">
                     <!-- Single Cool Facts area Start -->
                     <div class="cool_fact_text">
-                        <h2><span class="counter">15</span>+</h2>
+                        <h2><span class="counter">60</span>+</h2>
                         <h4>Years of experience</h4>
                     </div>
                 </div>
