--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
                     </div>
                     <!-- Main Menus Wrapper -->
                     <div class="nav-menus-wrapper">
-                        <a href="#" class="nav-button bg-mat-green align-to-right">Order Today!</a>
+                        <a href="#" class="nav-button bg-mat-green align-to-right pigeon">Order Today!</a>
                         <ul class="nav-menu align-to-right" id="nav">
                             <li class="active"><a href="#home">Home</a></li>
                             <li><a href="#about">About</a></li>
-                            <li><a href="#service">Service</a></li>
-                            <li><a href="#works">Products</a></li>
+                            <!-- <li><a href="#service">Service</a></li> -->
+                            <li><a href="#products">Products</a></li>
+                            <li><a href="#gallery">Gallery</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
@@ -80,7 +81,7 @@
                                 <div class="col-12 col-lg-8">
                                     <div class="text-left">
                                         <div class="s-obj default-title" id="title-one">
-                                            <h2>An Age Old Craft <span><br>In The 21st Century</span></h2>
+                                            <h2>Classic Craftsmanship <span><br>Meets Precision Technology</span></h2>
                                         </div>
                                         <div class="s-obj default-description" id="description-one">
                                             <p>Porta Door Co. Inc. has positioned itself to be <br> a leader in the woodworking industry for the 21st century!</p>
@@ -108,7 +109,7 @@
                                 <div class="col-12 col-lg-8">
                                     <div class="text-left">
                                         <div class="s-obj default-title" id="title-two">
-                                            <h2>An Age Old Craft <span>In the 21st Century</span></h2>
+                                            <h2>Classic Craftsmanship <span>Meets Precision Technology</span></h2>
                                         </div>
                                         <div class="s-obj default-description midnight_blue" id="description-two">
                                             <p>With the most modern and up to date machines on the market <br>we make products with the highest standards</p>
@@ -130,7 +131,7 @@
     <!-- ***** Welcome Slider Area End ***** -->
 
     <!-- ***** Special Feature Area Start ***** -->
-    <section class="special_feature_area agency_version bg-flat-midnightblue section_padding_100_70">
+    <section class=" bg-flat-midnightblue1 section_padding_100_70" id="service">
         <div class="container">
             <div class="row">
 
@@ -455,7 +456,7 @@
     <!-- ***** Service Details Area End ***** -->
 
     <!-- ***** Our Services Area Start ***** -->
-    <section class="what_we_do_area agency_version section_padding_100_70" id="service">
+    <section class="what_we_do_area agency_version section_padding_100_70" id="products">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -626,175 +627,19 @@
             </div>
         </div>
 
-        <div class="gallery_menu text-center">
-            <div class="portfolio-menu">
-                <button class="active btn" type="button" data-filter="*">All</button>
-                <button class="btn" type="button" data-filter=".web">Design</button>
-                <button class="btn" type="button" data-filter=".art">Art</button>
-                <button class="btn" type="button" data-filter=".bra">Branding</button>
-                <button class="btn" type="button" data-filter=".app">App</button>
-            </div>
-        </div>
+        <div class = "insta-images" id="gallery">
 
-        <div class="gallery_full_width_images_area clearfix">
-            <!-- Single gallery Item Start -->
-            <div class="single_gallery_item app wow fadeInUp">
-                <img src="img/gallery/1.jpg" alt="">
-                <!-- Hover Effect -->
-                <div class="hover_overlay">
-                    <div class="classy-table">
-                        <div class="classy-table-cell">
-                            <div class="gallery_info">
-                                <h6>Creative Work</h6>
-                                <p>Popup View</p>
-                            </div>
-                            <div class="more_details text-center">
-                                <a class="gallery_img" href="img/gallery/1.jpg"><i class="pe-7s-search"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/1768817780d15a21b1a6f736e470a926.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
 
-            <!-- Single gallery Item Start -->
-            <div class="single_gallery_item art wow fadeInUp">
-                <img src="img/gallery/2.jpg" alt="">
-                <!-- Hover Effect -->
-                <div class="hover_overlay">
-                    <div class="classy-table">
-                        <div class="classy-table-cell">
-                            <div class="gallery_info">
-                                <h6>Creative Work</h6>
-                                <p>External Link</p>
-                            </div>
-                            <div class="more_details text-center">
-                                <a href="#"><i class="pe-7s-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single gallery Item Start -->
-            <div class="single_gallery_item wow bra fadeInUp">
-                <img src="img/gallery/3.jpg" alt="">
-                <!-- Hover Effect -->
-                <div class="hover_overlay">
-                    <div class="classy-table">
-                        <div class="classy-table-cell">
-                            <div class="gallery_info">
-                                <h6>Creative Work</h6>
-                                <p>Popup View</p>
-                            </div>
-                            <div class="more_details text-center">
-                                <a class="gallery_img" href="img/gallery/3.jpg"><i class="pe-7s-search"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single gallery Item Start -->
-            <div class="single_gallery_item wow art fadeInUp">
-                <img src="img/gallery/4.jpg" alt="">
-                <!-- Hover Effect -->
-                <div class="hover_overlay">
-                    <div class="classy-table">
-                        <div class="classy-table-cell">
-                            <div class="gallery_info">
-                                <h6>Creative Work</h6>
-                                <p>Popup Video</p>
-                            </div>
-                            <div class="more_details text-center">
-                                <a class="video_btn" href="https://www.youtube.com/watch?v=X3wRfo4Xp40"><i class="pe-7s-play"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single gallery Item Start -->
-            <div class="single_gallery_item bra wow fadeInUp">
-                <img src="img/gallery/5.jpg" alt="">
-                <!-- Hover Effect -->
-                <div class="hover_overlay">
-                    <div class="classy-table">
-                        <div class="classy-table-cell">
-                            <div class="gallery_info">
-                                <h6>Creative Work</h6>
-                                <p>External Link</p>
-                            </div>
-                            <div class="more_details text-center">
-                                <a href="#"><i class="pe-7s-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single gallery Item Start -->
-            <div class="single_gallery_item art wow fadeInUp">
-                <img src="img/gallery/6.jpg" alt="">
-                <!-- Hover Effect -->
-                <div class="hover_overlay">
-                    <div class="classy-table">
-                        <div class="classy-table-cell">
-                            <div class="gallery_info">
-                                <h6>Creative Work</h6>
-                                <p>Popup View</p>
-                            </div>
-                            <div class="more_details text-center">
-                                <a class="gallery_img" href="img/gallery/6.jpg"><i class="pe-7s-search"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single gallery Item Start -->
-            <div class="single_gallery_item web wow fadeInUp">
-                <img src="img/gallery/7.jpg" alt="">
-                <!-- Hover Effect -->
-                <div class="hover_overlay">
-                    <div class="classy-table">
-                        <div class="classy-table-cell">
-                            <div class="gallery_info">
-                                <h6>Creative Work</h6>
-                                <p>Popup Video</p>
-                            </div>
-                            <div class="more_details text-center">
-                                <a class="video_btn" href="https://www.youtube.com/watch?v=X3wRfo4Xp40"><i class="pe-7s-play"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Single gallery Item Start -->
-            <div class="single_gallery_item bra wow fadeInUp">
-                <img src="img/gallery/8.jpg" alt="">
-                <!-- Hover Effect -->
-                <div class="hover_overlay">
-                    <div class="classy-table">
-                        <div class="classy-table-cell">
-                            <div class="gallery_info">
-                                <h6>Creative Work</h6>
-                                <p>External Link</p>
-                            </div>
-                            <div class="more_details text-center">
-                                <a href="#"><i class="pe-7s-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
         </div>
+
+
     </section>
     <!-- ***** Project area end ***** -->
 
     <!-- ***** Cool Facts Area Start ***** -->
-    <section class="agency_version cool_facts_area section_padding_50_20">
+    <section class="agency_version cool_facts_area section_padding_50_20 thingy">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-3">
@@ -839,8 +684,7 @@
                     <div class="message_title">
                         <!-- Section Heading Start -->
                         <div class="section_heading">
-                            <p class="text-dark">Drop a line</p>
-                            <h3 class="text-dark">Message Now</h3>
+                            <h3 class="text-dark">Message Us Now</h3>
                         </div>
                     </div>
 
@@ -882,7 +726,7 @@
                                     </div>
                                     <!-- Single Input Area Start -->
                                     <div class="col-12">
-                                        <button type="submit" class="btn btn-pill btn-lg btn-success">Submit Now</button>
+                                        <button type="submit" class="btn btn-pill btn-lg btn-success sbmit">Submit Now</button>
                                     </div>
                                 </div>
                             </div>
