--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
             
             <p>Watch this video</p>
             <!-- Video Link -->
-            <a href="https://www.youtube.com/watch?v=ru3cr01DbWo" class="video_btn"><i class="pe-7s-play" aria-hidden="true"></i></a>
+            <a href="" class="video_btn"><i class="pe-7s-play" aria-hidden="true"></i></a>
         </div>
     </div>
     <!-- ***** Video Area End ***** -->
