--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <nav id="navigation1" class="navigation">
                     <!-- Logo Area -->
                     <div class="nav-header">
-                        <a class="nav-brand" href="#">Porta Door Co. Inc.</a>
+                        <a class="nav-brand" href="#"><img src = "img/bg-img/logo1.png" ></a>
                         <div class="nav-toggle"></div>
                     </div>
                     <!-- Main Menus Wrapper -->
