--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <!-- Single Feature Image Area End -->
                         <div class="feature_text">
                             <h4>Build</h4>
-                            <p>With our 20,000 sq. ft. facility - we utilize the most state-of-the-art woodworking machinery to help build your project in a timely fashion - so you get it when you need it.</p>
+                            <p>With our 25,000 sq. ft. facility - we utilize the most state-of-the-art woodworking machinery to help build your project in a timely fashion - so you get it when you need it.</p>
                         </div>
                     </div>
                 </div>
@@ -680,7 +680,7 @@
     <!-- ***** Project area end ***** -->
 
     <!-- ***** Cool Facts Area Start ***** -->
-    <section class="agency_version cool_facts_area section_padding_50_20 thingy">
+    <section class="agency_version cool_facts_area section_padding_50_20">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-3">
