--- a/index.html
+++ b/index.html
@@ -375,42 +375,42 @@
                         <!-- Service Details Text Area -->
                         <div class="single_part_content m-top-30">
                             <h5>Crown Moulding</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/crown.png" alt="">
                             <p>Crown molding is part of a large family of moldings which are designed to gracefully flare out to a finished top edge. Crown molding is generally used for capping walls, pilasters, and cabinets, and is used extensively in the creation of interior and exterior cornice assemblies and door and window hoods.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Casings</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/casings.png" alt="">
                             <p>Of all types, custom designed and manufactured to your special needs.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Baseboard</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/baseboard.png" alt="">
                             <p>We make our baseboards with state of the art technology to help you protect your walls from impacts and to add decorative features.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Chair Rails</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/chair.png" alt="">
                             <p>We manufacture the highest quality chair rails to help protect the walls surface from chair backs - or you may use them simply as decoration.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Base Cap</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/basecap.png" alt="">
                             <p>We make it possible for you to add moulding to the top piece of a base moulding, which increases the decorative look. it’s sometimes used with baseboard; base cap may also be used as a panel moulding or multipurpose profile.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Solid Crowns</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/solid.png" alt="">
                             <p>We make top of the line non-finger-jointed moulding, solid crowns.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Wainscot Beads</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/wainscot.png" alt="">
                             <p>is a beaded interlocked moulding for cabinet and wall applications.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Plynths and Stools</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/plynth.png" alt="">
                             <p>Need a plynth to enhance the appearance of your door trim? Plynths are a decorative block of wood, thicker and wider than a door casing.</p>
                         </div>
 
