--- a/index.html
+++ b/index.html
@@ -440,22 +440,22 @@
                         <!-- Service Details Text Area -->
                         <div class="single_part_content m-top-30">
                             <h5>Fluted Fillers</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/fluted.png" alt="">
                             <p>Add to the style and beautify of your kitchen cabinets with decorative filler strips.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Rosettes</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/rosette.png" alt="">
                             <p>Want to add the design of the fluted filler? A rosette is a round carving that is usually placed on fluted fillers which provides a nice touch to finished cabinetry.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Toe Kicks</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/toe.png" alt="">
                             <p>A toe kick is the area between the base cabinet and the floor which adds a furniture like finish to the bottom of cabinetry.</p>
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Wine Racks</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/wine.png" alt="">
                             <p>We offer the ability to make wine racks for you, which offer a convenient place to store your wine bottles.</p>
                         </div>
 
@@ -486,23 +486,23 @@
                         <!-- Service Details Text Area -->
                         <div class="single_part_content m-top-30">
                             <h5>Interior/Exterior Doors</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/interior.png" alt="">
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Glass Doors</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/glass.png" alt="">
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Radius Doors</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/radius.png" alt="">
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Hood Panels</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/hood.png" alt="">
                         </div>
                         <div class="single_part_content m-top-30">
                             <h5>Wood Tops</h5>
-                            <img class="img-thumbnail" src="img/bg-img/cope.png" alt="">
+                            <img class="img-thumbnail" src="img/bg-img/woodtop.png" alt="">
                         </div>
                         <!-- Service Data Download Area -->
                         <div class="service_data_dl text-center">
