--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- Service Details Content Area -->
-                    <div class="service_details_content p-15">
+                    <center><div class="service_details_content p-15">
                         <!-- Service Details Thumb -->
                         <!-- Service Details Text Area -->
                         <div class="single_part_content m-top-30">
@@ -325,7 +325,7 @@
                             <p><strong>For more information. Download our catalog!</strong></p>
                             <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
-                    </div>
+                    </div></center>
                 </div>
             </div>
         </div>
@@ -341,7 +341,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- Service Details Content Area -->
-                    <div class="service_details_content p-15">
+                    <center><div class="service_details_content p-15">
                         <!-- Service Details Thumb -->
                         <!-- Service Details Text Area -->
                         <div class="single_part_content m-top-30">
@@ -354,7 +354,7 @@
                             <p><strong>For more information. Download our catalog!</strong></p>
                             <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
-                    </div>
+                    </div></center>
                 </div>
             </div>
         </div>
@@ -370,7 +370,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- Service Details Content Area -->
-                    <div class="service_details_content p-15">
+                    <center><div class="service_details_content p-15">
                         <!-- Service Details Thumb -->
                         <!-- Service Details Text Area -->
                         <div class="single_part_content m-top-30">
@@ -419,7 +419,7 @@
                             <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
                         
-                    </div>
+                    </div></center>
                 </div>
             </div>
         </div>
@@ -435,7 +435,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- Service Details Content Area -->
-                    <div class="service_details_content p-15">
+                    <center><div class="service_details_content p-15">
                         <!-- Service Details Thumb -->
                         <!-- Service Details Text Area -->
                         <div class="single_part_content m-top-30">
@@ -465,7 +465,7 @@
                             <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
 
-                    </div>
+                    </div></center>
                 </div>
             </div>
         </div>
@@ -481,7 +481,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- Service Details Content Area -->
-                    <div class="service_details_content p-15">
+                    <center><div class="service_details_content p-15">
                         <!-- Service Details Thumb -->
                         <!-- Service Details Text Area -->
                         <div class="single_part_content m-top-30">
@@ -509,7 +509,7 @@
                             <p><strong>For more information. Download our catalog!</strong></p>
                             <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
-                    </div>
+                    </div></center>
                 </div>
             </div>
         </div>
