--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <!-- Service Data Download Area -->
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
                     </div></center>
                 </div>
@@ -323,7 +323,7 @@
                         <!-- Service Data Download Area -->
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
                     </div></center>
                 </div>
@@ -352,7 +352,7 @@
 
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
                     </div></center>
                 </div>
@@ -416,7 +416,7 @@
 
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
                         
                     </div></center>
@@ -462,7 +462,7 @@
 
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
 
                     </div></center>
@@ -507,7 +507,7 @@
                         <!-- Service Data Download Area -->
                         <div class="service_data_dl text-center">
                             <p><strong>For more information. Download our catalog!</strong></p>
-                            <a href="dummy-data/worksheet.pdf" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
+                            <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
                     </div></center>
                 </div>
