--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <!-- Main Menus Wrapper -->
                     <div class="nav-menus-wrapper">
-                        <a href="#" class="nav-button bg-mat-green align-to-right pigeon">Order Today!</a>
+                        <a href="#" data-target="#quotes" data-toggle="modal" class="nav-button bg-mat-green align-to-right pigeon">Order Today!</a>
                         <ul class="nav-menu align-to-right" id="nav">
                             <li class="active"><a href="#home">Home</a></li>
                             <li><a href="#about">About</a></li>
@@ -509,6 +509,93 @@
                             <p><strong>For more information. Download our catalog!</strong></p>
                             <a href="#" class="btn btn-pill btn-mat-green" download>Download PDF Document</a>
                         </div>
+                    </div></center>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Online Order -->
+
+    <div class="modal fade" id="quotes" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog custom-modal" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="exampleModalLabel">Request a Quote</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Service Details Content Area -->
+                    <center>
+                        <div class="service_details_content p-15">
+
+                            <div class="single_part_content m-top-30">
+                                <h4>Cabinet Door Quotes</h4>
+                                <img class="img-thumbnail" src="img/bg-img/cope.png" alt=""><br>
+                                <a href="#" data-toggle="modal" data-target="#doorQuotes" data-dismiss="modal" button type="button" class="btn btn-success mt-3">Get Your Door Quote!</button></a>
+                            </div>
+                            <br>
+
+
+                            <!-- ---------------------------------------------------------- -->
+
+
+                            <!-- Service Details Text Area -->
+                            <div class="single_part_content m-top-30">
+                                <h4>Drawer Box Quotes</h4>
+                                <img class="img-thumbnail" src="img/bg-img/drawer.png" alt=""><br>
+                                <a href="#" data-toggle="modal" data-target="#drawerQuotes" data-dismiss="modal" button type="button" class="btn btn-success mt-3">Get Your Drawer Box Quote!</button></a>
+                            </div>
+                    
+                        </div>
+                    </center>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="modal fade" id="doorQuotes" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog custom-modal" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Request a Quote</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Service Details Content Area -->
+                    <center><div class="service_details_content p-15">
+                        <!-- Service Details Thumb -->
+                        <!-- <div class="service_details_thumb">
+                            <img class="img-thumbnail" src="img/services-img/service-details.jpg" alt="">
+                        </div> -->
+
+                        <script type="text/javascript" src="https://form.jotform.com/jsform/71414920677156"></script>
+
+                    </div></center>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="drawerQuotes" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog custom-modal" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Request a Quote</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                </div>
+                <div class="modal-body">
+                    <!-- Service Details Content Area -->
+                    <center><div class="service_details_content p-15">
+                        <!-- Service Details Thumb -->
+                        <!-- <div class="service_details_thumb">
+                            <img class="img-thumbnail" src="img/services-img/service-details.jpg" alt="">
+                        </div> -->
+
+                        <script type="text/javascript" src="https://form.jotform.com/jsform/71423994377164"></script>
+
                     </div></center>
                 </div>
             </div>
